Height and Width for centering

--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,8 @@ button:focus {
     position: absolute;
     top: 80%; right: 50%;
     transform: translate(50%,-50%);
-    width: 10rem;
-    height: 3rem;
+    width: auto;
+    min-width: 410px;
+    height: auto;
+    min-height: 210px;
 }
