--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body::-webkit-scrollbar {
 }
 
 #typed-text {
-    font-size: max(4vw, 3rem);
+    font-size: 3vw;
     color: #ffffff;
     z-index: 100;
     white-space: pre;
@@ -195,7 +195,7 @@ body::after {
   top: 45px;
   left: 40px;
   font-family: 'Roboto Mono', monospace;
-  font-size: max(4vw, 3rem);
+  font-size: 2vw;
   font-weight: 300;
   color: #f1f1f1;
   background: none;
@@ -220,7 +220,7 @@ body::after {
   top: 45px;
   left: 50px;
   font-family: 'Roboto Mono', monospace;
-  font-size: max(4vw, 3rem);
+  font-size: 2vw;
   font-weight: 300;
   color: #f1f1f1;
   background: none;
