Sizes scaling stuff and positioning.

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding-left: 2vw;
+    padding-left: 1vw;
 }
 
 #typed-text {
@@ -192,10 +192,10 @@ body::after {
 
 #projectsButton {
   position: relative;
-  top: 45px;
-  left: 40px;
+  top: 55px;
+  left: 1vw;
   font-family: 'Roboto Mono', monospace;
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-weight: 300;
   color: #f1f1f1;
   background: none;
@@ -217,10 +217,10 @@ body::after {
 
 #contactButton {
   position: relative;
-  top: 45px;
+  top: 55px;
   left: 50px;
   font-family: 'Roboto Mono', monospace;
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-weight: 300;
   color: #f1f1f1;
   background: none;
