--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,14 @@ body::after {
 }
 
 .nav {
+    position: absolute;
     display: flex; /* sets the container to use flexbox layout */
     justify-content: center; /* centers the buttons horizontally */
     align-items: center; /* centers the buttons vertically */
     width: 100vw;
-    height: 110px;
+    height: 60px;
+    left: 0;
+    top: 0;
 }
 
 .nav button {
