--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
   padding: 2em;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 @media screen and (max-width: 480px) {
   body {
