--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,23 @@ body.light-mode .video-bg:before {
   overflow: auto;
   flex-shrink: 0;
 }
+
+.left-side::-webkit-scrollbar {
+  width: 5px;
+}
+
+.left-side::-webkit-scrollbar-thumb {
+  background-color: rgb(113, 119, 144);
+}
+
+.left-side::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.left-side::-webkit-scrollbar-button:start, ::-webkit-scrollbar-button:end {
+  display: none;
+}
+
 @media screen and (max-width: 945px) {
   .left-side {
     display: none;
