--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
 * {
   outline: none;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
 }
 
 :root {
@@ -327,25 +329,25 @@ body.light-mode .video-bg:before {
   scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
 }
 
-.left-side::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: rgb(113, 119, 144);
   border-radius: 3px;
 }
 
-.left-side::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 6px;
 }
 
-.left-side::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: rgb(113, 119, 144);
   border-radius: 3px;
 }
 
-.left-side::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-.left-side::-webkit-scrollbar-button {
+*::-webkit-scrollbar-button {
   display: none;
 }
 
