--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,7 @@ body.light-mode .video-bg:before {
 .header-profile {
   display: flex;
   align-items: center;
-  padding: 0 0 0 16px;
+  padding: 0 10px 0 16px;
   flex-shrink: 0;
 }
 .header-profile svg {
