--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,15 @@ body {
   align-items: center;
   background-color: var(--bg-color);
   display: flex;
-  height: 200vh;
+  height: 100vh;
   justify-content: center;
   margin: 0px;
   padding: 0px;
+}
+
+#titlebar {
+  color: white;
+  
 }
 
 #cards {
@@ -20,7 +25,7 @@ body {
   max-width: 916px;
   width: calc(100% - 20px);
   position: absolute;
-  top: 100px;
+  top: 400px;
 }
 
 #cards:hover > .card::after {
